2.AKS/GitOps/harbor/harbor-1.7.0/harbor-ingress-notray.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: cicd
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2022-03-02T11:00:42Z"
  generation: 1
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress-notary
  namespace: cicd
  resourceVersion: "2362109"
  uid: de91c4e5-859d-464d-8788-6eea9dfa0687
spec:
  rules:
  - host: notary.nodespringboot.org
    http:
      paths:
      - backend:
          service:
            name: harbor-notary-server
            port:
              number: 4443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - notary.nodespringboot.org
    secretName: harbor-ingress
status:
  loadBalancer:
    ingress:
    - ip: 20.200.227.196
